--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "edgeware"
-version = "0.4.0"
+name = "straightedge"
+version = "0.8.0"
 authors = ["Commonwealth Labs <hello@commonwealth.im>"]
 build = "build.rs"
 edition = "2018"
 
 [[bin]]
-name = "edgeware"
+name = "straightedge"
 path = "node/src/main.rs"
 
 [dependencies]
 error-chain = "0.12"
-edgeware-cli = { path = "node/cli" }
+straightedge-cli = { path = "node/cli" }
 futures = "0.1"
 ctrlc = { version = "3.0", features = ["termination"] }
 
@@ -25,9 +25,11 @@ members = [
 	"node/executor",
 	"node/primitives",
 	"node/service",
-	"modules/edge-governance",
+	"node/rpc",
+	"modules/edge-signaling",
 	"modules/edge-identity",
 	"modules/edge-voting",
+	"modules/edge-treasury-reward",
 ]
 
 [badges]
