--- a/modules/edge-identity/Cargo.toml
+++ b/modules/edge-identity/Cargo.toml
@@ -2,20 +2,21 @@
 name = "edge-identity"
 version = "0.1.0"
 authors = ["Drew Stone <drew@commonwealth.im>"]
+edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", default-features = false, optional = true }
 serde_derive = { version = "1.0", optional = true }
 safe-mix = { version = "1.0", default-features = false }
-parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
-substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
-substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
-sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
-sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
-sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
-srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
-srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
-srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
+parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
+substrate-keyring = { git = "https://github.com/hicommonwealth/substrate.git", optional = true }
+substrate-primitives = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sr-std = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sr-io = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sr-primitives = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+srml-support = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+srml-system = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+srml-balances = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
 
 [features]
 default = ["std"]
