--- a/modules/edge-voting/Cargo.toml
+++ b/modules/edge-voting/Cargo.toml
@@ -7,28 +7,28 @@ authors = ["Drew Stone <drew@commonwealth.im>"]
 serde = { version = "1.0", default-features = false, optional = true }
 serde_derive = { version = "1.0", optional = true }
 safe-mix = { version = "1.0", default-features = false }
-parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
-substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
-substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
-sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
-sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
-sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
-srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
-srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
-srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
+parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
+substrate-keyring = { git = "https://github.com/hicommonwealth/substrate.git", optional = true }
+substrate-primitives = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sr-std = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sr-io = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sr-primitives = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+srml-support = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+srml-system = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+srml-balances = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
 
 [features]
 default = ["std"]
 std = [
-    "serde/std",
-    "serde_derive",
-    "safe-mix/std",
-    "parity-codec/std",
-    "substrate-primitives/std",
-    "sr-std/std",
-    "sr-io/std",
-    "srml-support/std",
-    "sr-primitives/std",
-    "srml-system/std",
-    "srml-balances/std",
+	"serde/std",
+	"serde_derive",
+	"safe-mix/std",
+	"parity-codec/std",
+	"substrate-primitives/std",
+	"sr-std/std",
+	"sr-io/std",
+	"srml-support/std",
+	"sr-primitives/std",
+	"srml-system/std",
+	"srml-balances/std",
 ]
