--- a/node/primitives/Cargo.toml
+++ b/node/primitives/Cargo.toml
@@ -1,19 +1,22 @@
 [package]
-name = "edgeware-primitives"
+name = "straightedge-primitives"
 version = "0.1.0"
 authors = ["Commonwealth Labs <hello@commonwealth.im>"]
 edition = "2018"
 
 [dependencies]
-serde = { version = "1.0", optional = true }
-parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
-primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
-rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
-runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
+primitives = { package = "substrate-primitives", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+rstd = { package = "sr-std", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+runtime_primitives = { package = "sr-primitives", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+consensus-aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/hicommonwealth/substrate.git", default_features = false }
+client = { package = "substrate-client", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+
 
 [dev-dependencies]
-substrate-serializer = { git = "https://github.com/paritytech/substrate" }
-pretty_assertions = "0.5"
+substrate-serializer = { git = "https://github.com/hicommonwealth/substrate.git" }
+pretty_assertions = "0.6.1"
 
 [features]
 default = ["std"]
@@ -23,4 +26,5 @@ std = [
 	"rstd/std",
 	"runtime_primitives/std",
 	"serde",
+	"client/std",
 ]
