--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "edgeware-runtime"
-version = "0.2.0"
+name = "straightedge-runtime"
+version = "0.8.0"
 authors = ["Commonwealth Labs <hello@commonwealth.im>"]
 edition = "2018"
 build = "build.rs"
@@ -8,43 +8,50 @@ build = "build.rs"
 [dependencies]
 integer-sqrt = { version = "0.1.2" }
 safe-mix = { version = "1.0", default-features = false }
-parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
-substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
-client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default-features = false }
-rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
-runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
-offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
-version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default-features = false }
-support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default-features = false }
-aura = { package = "srml-aura", git = "https://github.com/paritytech/substrate", default-features = false }
-authorship = { package = "srml-authorship", git = "https://github.com/paritytech/substrate", default-features = false }
-balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default-features = false }
-contracts = { package = "srml-contracts", git = "https://github.com/paritytech/substrate", default-features = false }
-collective = { package = "srml-collective", git = "https://github.com/paritytech/substrate", default-features = false }
-democracy = { package = "srml-democracy", git = "https://github.com/paritytech/substrate", default-features = false }
-elections = { package = "srml-elections", git = "https://github.com/paritytech/substrate", default-features = false }
-executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", default-features = false }
-finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/paritytech/substrate", default-features = false }
-grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", default-features = false }
-indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", default-features = false }
-session = { package = "srml-session", git = "https://github.com/paritytech/substrate", default-features = false, features = ["historical"] }
-staking = { package = "srml-staking", git = "https://github.com/paritytech/substrate", default-features = false }
-system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default-features = false }
-timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default-features = false }
-treasury = { package = "srml-treasury", git = "https://github.com/paritytech/substrate", default-features = false }
-sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", default-features = false }
-consensus_aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
+parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
+substrate-primitives = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+client = { package = "substrate-client", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+rstd = { package = "sr-std", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+runtime_primitives = { package = "sr-primitives", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sr-staking-primitives = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+version = { package = "sr-version", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+support = { package = "srml-support", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+aura = { package = "srml-aura", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+authorship = { package = "srml-authorship", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+balances = { package = "srml-balances", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+contracts = { package = "srml-contracts", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+collective = { package = "srml-collective", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+offences = { package = "srml-offences", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+democracy = { package = "srml-democracy", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+elections = { package = "srml-elections", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+executive = { package = "srml-executive", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+grandpa = { package = "srml-grandpa", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+indices = { package = "srml-indices", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+session = { package = "srml-session", git = "https://github.com/hicommonwealth/substrate.git", default-features = false, features = ["historical"] }
+staking = { package = "srml-staking", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+system = { package = "srml-system", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+timestamp = { package = "srml-timestamp", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+treasury = { package = "srml-treasury", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+sudo = { package = "srml-sudo", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+authority-discovery = { package = "srml-authority-discovery", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+consensus_aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+im-online = { package = "srml-im-online", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
 rustc-hex = { version = "2.0", optional = true }
 serde = { version = "1.0", optional = true }
-substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
+substrate-keyring = { git = "https://github.com/hicommonwealth/substrate.git", optional = true }
+substrate-session = { git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
 
 edge-identity = { path = "../../modules/edge-identity", default-features = false }
 edge-voting = { path = "../../modules/edge-voting", default-features = false }
-edge-governance = { path = "../../modules/edge-governance", default-features = false }
-edgeware-primitives = { path = "../primitives", default-features = false }
+edge-signaling = { path = "../../modules/edge-signaling", default-features = false }
+edge-treasury-reward = { path = "../../modules/edge-treasury-reward", default-features = false }
+straightedge-primitives = { path = "../primitives", default-features = false }
 
 [build-dependencies]
-wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2", git = "https://github.com/paritytech/substrate" }
+wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2", git = "https://github.com/hicommonwealth/substrate.git" }
 
 [features]
 default = ["std"]
@@ -52,6 +59,8 @@ no_std = [
 	"contracts/core",
 ]
 std = [
+	"authority-discovery-primitives/std",
+	"authority-discovery/std",
 	"parity-codec/std",
 	"substrate-primitives/std",
 	"rstd/std",
@@ -62,6 +71,7 @@ std = [
 	"balances/std",
 	"contracts/std",
 	"collective/std",
+	"offences/std",
 	"democracy/std",
 	"elections/std",
 	"executive/std",
@@ -82,8 +92,12 @@ std = [
 	"rustc-hex",
 	"substrate-keyring",
 	"offchain-primitives/std",
+	"sr-staking-primitives/std",
+	"substrate-session/std",
+	"im-online/std",
 	"edge-identity/std",
 	"edge-voting/std",
-	"edge-governance/std",
-	"edgeware-primitives/std",
+	"edge-signaling/std",
+	"edge-treasury-reward/std",
+	"straightedge-primitives/std",
 ]
