--- a/node/service/Cargo.toml
+++ b/node/service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "edgeware-service"
+name = "straightedge-service"
 version = "0.1.0"
 authors = ["Commonwealth Labs <hello@commonwealth.im>"]
 edition = "2018"
@@ -9,35 +9,43 @@ log = "0.4"
 tokio = "0.1.7"
 futures = "0.1"
 exit-future = "0.1"
+jsonrpc-core = "13.1.0"
 parity-codec = { version = "4.1.1" }
-sr-io = { git = "https://github.com/paritytech/substrate" }
-client = { package = "substrate-client", git = "https://github.com/paritytech/substrate" }
-primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate" }
-inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate" }
+sr-io = { git = "https://github.com/hicommonwealth/substrate.git" }
+client = { package = "substrate-client", git = "https://github.com/hicommonwealth/substrate.git" }
+substrate-rpc = { package = "substrate-rpc", git = "https://github.com/hicommonwealth/substrate.git" }
+primitives = { package = "substrate-primitives", git = "https://github.com/hicommonwealth/substrate.git" }
+inherents = { package = "substrate-inherents", git = "https://github.com/hicommonwealth/substrate.git" }
 hex-literal = "0.2"
-substrate-basic-authorship = { git = "https://github.com/paritytech/substrate" }
-substrate-service = { git = "https://github.com/paritytech/substrate" }
-transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate" }
-network = { package = "substrate-network", git = "https://github.com/paritytech/substrate" }
-aura = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate" }
-aura_primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate" }
-grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate" }
-grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate" }
-sr-primitives = { git = "https://github.com/paritytech/substrate" }
-substrate-keystore = { git = "https://github.com/paritytech/substrate" }
-substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/paritytech/substrate" }
+substrate-basic-authorship = { git = "https://github.com/hicommonwealth/substrate.git" }
+substrate-service = { git = "https://github.com/hicommonwealth/substrate.git" }
+transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/hicommonwealth/substrate.git" }
+network = { package = "substrate-network", git = "https://github.com/hicommonwealth/substrate.git" }
+aura = { package = "substrate-consensus-aura", git = "https://github.com/hicommonwealth/substrate.git" }
+aura_primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/hicommonwealth/substrate.git" }
+grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/hicommonwealth/substrate.git" }
+grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/hicommonwealth/substrate.git" }
+sr-primitives = { git = "https://github.com/hicommonwealth/substrate.git" }
+substrate-keystore = { git = "https://github.com/hicommonwealth/substrate.git" }
+substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/hicommonwealth/substrate.git" }
 structopt = "0.2"
-transaction-factory = { git = "https://github.com/paritytech/substrate" }
-keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate" }
-indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate" }
-timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default-features = false }
+transaction-factory = { git = "https://github.com/hicommonwealth/substrate.git" }
+keyring = { package = "substrate-keyring", git = "https://github.com/hicommonwealth/substrate.git" }
+indices = { package = "srml-indices", git = "https://github.com/hicommonwealth/substrate.git" }
+im-online = { package = "srml-im-online", git = "https://github.com/hicommonwealth/substrate.git" }
+timestamp = { package = "srml-timestamp", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
 rand = "0.6"
-finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/paritytech/substrate", default-features = false }
-contracts = { package = "srml-contracts", git = "https://github.com/paritytech/substrate" }
-edgeware-primitives = { path = "../primitives" }
-edgeware-runtime = { path = "../runtime" }
-edgeware-executor = { path = "../executor" }
+rand_chacha = "0.2.1"
+finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/hicommonwealth/substrate.git", default-features = false }
+contracts = { package = "srml-contracts", git = "https://github.com/hicommonwealth/substrate.git" }
+straightedge-primitives = { path = "../primitives" }
+straightedge-runtime = { path = "../runtime" }
+straightedge-executor = { path = "../executor" }
+straightedge-rpc = { path = "../rpc" }
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+hex = "0.3.2"
 
 [dev-dependencies]
-substrate-consensus-common = { git = "https://github.com/paritytech/substrate" }
-service-test = { package = "substrate-service-test", git = "https://github.com/paritytech/substrate" }
+substrate-consensus-common = { git = "https://github.com/hicommonwealth/substrate.git" }
+service-test = { package = "substrate-service-test", git = "https://github.com/hicommonwealth/substrate.git" }
